--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.13",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "autoprefixer": "^10.4.20",
+    "ng2-pdf-viewer": "^10.4.0",
     "postcss": "^8.4.49",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.16",
